--- a/src/main/resources/templates/declarant/list.html
+++ b/src/main/resources/templates/declarant/list.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <title>Liste des Declarants</title>
 
-    <link rel="stylesheet" th:href="@{/css/style.css}" />
+    <link rel="stylesheet"/>
 </head>
 <body>
 
 <div class="container">
-    <div th:replace="~{index :: menu}"></div>
+    <div></div>
     <h1>Liste des Declarants</h1>
         <!-- Affichage du message de succès -->
         <div th:if="${successMessage}" class="success-message">
-            <p th:text="${successMessage}"></p>
+            <p></p>
         </div>
 
     <!-- Affichage du message d'erreur -->
         <div th:if="${errorMessage}" class="error-message">
-            <p th:text="${errorMessage}"></p>
+            <p></p>
         </div>
     <table class="declarant-table">
         <tr>
@@ -28,16 +28,16 @@
             <th>Email</th>
             <th>Téléphone</th>
         </tr>
-        <tr th:each="declarant : ${listDeclarants}">
-            <td th:text="${declarant.id}"></td>
-            <td th:text="${declarant.raisonSociale}"></td>
-            <td th:text="${declarant.adresse}"></td>
-            <td th:text="${declarant.email}"></td>
-            <td th:text="${declarant.telephone}"></td>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
         </tr>
     </table>
-    <a th:href="@{/declarants/addNewDeclarant}" class="add-button">+</a>
-    <a th:href="@{/}" class="quit-button">X</a>
+    <a class="add-button">+</a>
+    <a class="quit-button">X</a>
 </div>
 </body>
 </html>
